# D.I.S.H.A

./: .gitignore  Analyze.py  Bait.py  D-HETY1H.py  Experiment.py  Image.py  Pipeline.py  README.md  SegmentationModel.py  app.py  bak_app.py  excel_process.ipynb  grid_process.ipynb  pyproject.toml  requirements.txt  test.py  test_coco.py  utils.py  verify.py
.ipynb_checkpoints/: excel_process-checkpoint.ipynb  grid_process-checkpoint.ipynb
data/: HetY1H Pilot TF coordinates.xlsx  IP meeting 11-11-21.pptx
disha/: Experiment.py  Image.py  Pipeline.py  disha_phy1h.py  utils.py  verify.py
docs/: demo_notebook.ipynb
templates/: browser.html  index.html
uploads/test/: AB_HetY1Hpilot3-16_5mm_3AT_X-gal_7d.html  AB_HetY1Hpilot3-5_5mm_3AT_X-gal_7d.html  AB_HetY1Hpilot3-7_5mm_3AT_X-gal_5d.html  AB_HetY1Hpilot3-9_5mm_3AT_X-gal_7d.html
